crates/schema/tests/compile_fail/derive_emit_as_invalid_key.stderr
error: `has-dash` is not a valid schema field key (key must be ASCII alphanumeric or underscore); rename the field so its key is a non-empty ASCII identifier of at most 64 characters
 --> tests/compile_fail/derive_emit_as_invalid_key.rs:9:5
  |
9 |     field: String,
  |     ^^^^^

error[E0599]: no associated function or constant named `schema` found for struct `Bad` in the current scope
  --> tests/compile_fail/derive_emit_as_invalid_key.rs:13:18
   |
 7 | struct Bad {
   | ---------- associated function or constant `schema` not found for this struct
...
13 |     let _ = Bad::schema();
   |                  ^^^^^^ associated function or constant not found in `Bad`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `schema`, perhaps you need to implement it:
           candidate #1: `HasSchema`
